app/logs/react_app.txt
Compiled with problems:
×
ERROR in ./src/TrainingLoadDashboard.tsx
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\Users\robho\Documents\GarminLocal\frontend\src\TrainingLoadDashboard.tsx: Identifier 'checkSyncStatus' has already been declared. (410:6)

  408 |
  409 | // Add these new functions to your component
> 410 | const checkSyncStatus = async () => {
      |       ^
  411 |   try {
  412 |     const response = await fetch('/api/garmin/sync-status');
  413 |     if (response.ok) {
    at constructor (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:360:19)
    at TypeScriptParserMixin.raise (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:3338:19)
    at TypeScriptScopeHandler.checkRedeclarationInScope (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:1566:19)
    at TypeScriptScopeHandler.declareName (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:1532:12)
    at TypeScriptScopeHandler.declareName (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:7066:11)
    at TypeScriptParserMixin.declareNameFromIdentifier (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:7494:16)
    at TypeScriptParserMixin.checkIdentifier (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:7490:12)
    at TypeScriptParserMixin.checkLVal (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:7431:12)
    at TypeScriptParserMixin.parseVarId (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:13072:10)
    at TypeScriptParserMixin.parseVarId (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:9605:11)
    at TypeScriptParserMixin.parseVar (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:13047:12)
    at TypeScriptParserMixin.parseVarStatement (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12894:10)
    at TypeScriptParserMixin.parseVarStatement (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:9335:31)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12515:23)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:9365:18)
    at TypeScriptParserMixin.parseStatementLike (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12432:17)
    at TypeScriptParserMixin.parseStatementListItem (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12412:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12980:61)
    at TypeScriptParserMixin.parseBlockBody (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12973:10)
    at TypeScriptParserMixin.parseBlock (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12961:10)
    at TypeScriptParserMixin.parseFunctionBody (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:11810:24)
    at TypeScriptParserMixin.parseArrowExpression (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:11785:10)
    at TypeScriptParserMixin.parseParenAndDistinguishExpression (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:11398:12)
    at TypeScriptParserMixin.parseExprAtom (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:11033:23)
    at TypeScriptParserMixin.parseExprAtom (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:6950:20)
    at TypeScriptParserMixin.parseExprSubscripts (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:10785:23)
    at TypeScriptParserMixin.parseUpdate (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:10770:21)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:10750:23)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:9690:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:10603:61)
    at TypeScriptParserMixin.parseExprOps (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:10608:23)
    at TypeScriptParserMixin.parseMaybeConditional (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:10585:23)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:10538:21)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:9639:20)
    at C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:10507:39
    at TypeScriptParserMixin.allowInAnd (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12121:16)
    at TypeScriptParserMixin.parseMaybeAssignAllowIn (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:10507:17)
    at TypeScriptParserMixin.parseVar (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:13048:91)
    at TypeScriptParserMixin.parseVarStatement (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12894:10)
    at TypeScriptParserMixin.parseVarStatement (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:9335:31)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12515:23)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:9365:18)
    at TypeScriptParserMixin.parseStatementLike (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12432:17)
    at TypeScriptParserMixin.parseModuleItem (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12409:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12980:36)
    at TypeScriptParserMixin.parseBlockBody (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12973:10)
    at TypeScriptParserMixin.parseProgram (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12306:10)
    at TypeScriptParserMixin.parseTopLevel (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:12296:25)
    at TypeScriptParserMixin.parse (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:14152:10)
    at TypeScriptParserMixin.parse (C:\Users\robho\Documents\GarminLocal\frontend\node_modules\@babel\parser\lib\index.js:9982:18)